--- a/web/assets/css/historial.css
+++ b/web/assets/css/historial.css
@@ -123,22 +123,21 @@ body {
 
 /* Modal */
 .incident-detail-modal {
-    display: none;
+    display: none; /* oculto por defecto */
     position: fixed;
     top: 0; left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.6);
     z-index: 9999;
-
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;    /* aquí */
-    
+    justify-content: center; /* centrar horizontal */
+    align-items: center;     /* centrar vertical */
     overflow-y: auto;
-    padding: 40px 20px 20px 20px; /* espacio arriba */
+    padding: 20px 500px;          /* para que no toque bordes en pantallas pequeñas */
     box-sizing: border-box;
+    
 }
+
 
 .modal-content {
     background-color: white;
