--- a/web/assets/css/historial.css
+++ b/web/assets/css/historial.css
@@ -179,11 +179,24 @@ body {
     margin-top: 20px;
 }
 
-.video-container video {
+.video-container {
+    position: relative;
     width: 100%;
-    border-radius: 8px;
+    padding-top: 56.25%; /* Relación 16:9 */
     margin-bottom: 20px;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: #000;
 }
+
+.video-container video {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Para cubrir bien el área sin distorsionar */
+}
+
 
 /* Info del incidente */
 .incident-info h3 {
